--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/tdd5rjb.css">
 </head>
 <body>
-    <div id="page">
+    <div id="wrap">
         <div id="header">
             <a href="#top" class="logo">Joseph Yoon</a>
             <ul>
@@ -18,36 +18,34 @@
             </ul>
         </div>
         <div id="pageWrap">
-            <div id="content">
-                <h1 class="top">The Portfolio of Joseph Yoon</h1>
-                <div id="projects">
-                    <img id="0" src="" alt="">
-                    <img id="1" src="" alt="">
-                    <img id="2" src="" alt="">
-                    <img id="3" src="" alt="">
-                    <img id="4" src="" alt="">
-                    <img id="5" src="" alt="">
-                    <img id="6" src="" alt="">
-                    <img id="7" src="" alt="">
-                    <img id="8" src="" alt="">
-                    <img id="9" src="" alt="">
-                    <img id="10" src="" alt="">
-                    <img id="11" src="" alt="">
-                    <img id="12" src="" alt="">
-                    <img id="13" src="" alt="">
-                    <img id="14" src="" alt="">
-                    <img id="15" src="" alt="">
-                    <img id="16" src="" alt="">
-                    <img id="17" src="" alt="">
-                    <img id="18" src="" alt="">
-                    <img id="19" src="" alt="">
-                    <script>
-                        var i = 0;
-                        for (var i = 0; i <= 19; i++) {
-                            document.getElementById(i).src = "img/" + i + ".jpg";
-                        }
-                    </script>
-                </div>
+            <h1 class="top">The Portfolio of Joseph Yoon</h1>
+            <div id="projects">
+                <img id="0" src="" alt="">
+                <img id="1" src="" alt="">
+                <img id="2" src="" alt="">
+                <img id="3" src="" alt="">
+                <img id="4" src="" alt="">
+                <img id="5" src="" alt="">
+                <img id="6" src="" alt="">
+                <img id="7" src="" alt="">
+                <img id="8" src="" alt="">
+                <img id="9" src="" alt="">
+                <img id="10" src="" alt="">
+                <img id="11" src="" alt="">
+                <img id="12" src="" alt="">
+                <img id="13" src="" alt="">
+                <img id="14" src="" alt="">
+                <img id="15" src="" alt="">
+                <img id="16" src="" alt="">
+                <img id="17" src="" alt="">
+                <img id="18" src="" alt="">
+                <img id="19" src="" alt="">
+                <script>
+                    var i = 0;
+                    for (var i = 0; i <= 19; i++) {
+                        document.getElementById(i).src = "img/" + i + ".jpg";
+                    }
+                </script>
             </div>
         </div>
     </div>
