--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div id="header">
-        <a href="#top" class="logo">Joseph Yoon</a>
+        <a href="#home" class="logo">Joseph Yoon</a>
         <ul>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </ul>
     </div>
     <div id="pageWrap">
-        <h1 id="top">Joseph Yoon</h1>
+        <h1 id="home">Joseph Yoon</h1>
         <div id="projects">
             <img id="0" src="" alt="">
             <img id="1" src="" alt="">
@@ -47,6 +47,10 @@
             </script>
         </div>
     </div>
+    <div id="preload"><p id="p">Loading</p></div>
+    <div id="cursorFollower"></div>
+    <div id="cursor"></div>
+    <footer>© 2020 Joseph Yoon  —  Designed by <a href="https://jacobyoon.cf/" target="none">Jacob Yoon</a></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="js/script.js"></script>
 </body>
