--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>Joseph Yoon</title>
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="https://use.typekit.net/tdd5rjb.css">
 </head>
 <body>
@@ -14,11 +15,12 @@
         <a href="index.html" class="logo">Joseph Yoon</a>
         <div id="links">
             <a href="about.html">About</a>
-            <a href="#">Contact</a>
         </div>
     </div>
     <div id="about">
         <p id="desc"><a href="index.html">Joseph Yoon</a>  is an avid artist and photographer based in Ithaca, NY. He currently attends Cornell University and has ambitious creative plans for the future.</p>
+        <div id="image"></div>
+        <div id="footer">© Joseph Yoon 2020</div>
     </div>
     <div id="preload"><p id="p"></p></div>
     <div id="cursorFollower"></div>
