--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <div id="image"></div>
         <div id="footer">© Joseph Yoon 2020</div>
     </div>
-    <div id="preload"><p id="p"></p></div>
+    <div id="preload"><div id="p"></div></div>
     <div id="cursorFollower"></div>
     <div id="cursor">
         <div class="a"></div>
@@ -33,8 +33,7 @@
     <script src="js/script.js"></script>
     <script language="javascript" type="text/javascript">
         $(window).load(function() {
-            document.getElementById('p').style.opacity = "0";
-            document.getElementById('preload').style.top = "-100vh";
+            document.getElementById('preload').style.opacity = "0";
         });
     </script>
 </body>
