--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </script>
         </div>
     </div>
-    <div id="preload"><p id="p"></p></div>
+    <div id="preload"><div id="p"></div></div>
     <div id="cursorFollower"></div>
     <div id="cursor">
         <div class="a"></div>
@@ -58,8 +58,7 @@
     <script src="js/script.js"></script>
     <script language="javascript" type="text/javascript">
         $(window).load(function() {
-            document.getElementById('p').style.opacity = "0";
-            document.getElementById('preload').style.top = "-100vh";
+            document.getElementById('preload').style.opacity = "0";
         });
     </script>
 </body>
