--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Joseph Yoon</title>
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="https://use.typekit.net/tdd5rjb.css">
 </head>
 <body>
@@ -18,35 +19,32 @@
     </div>
     <div id="pageWrap">
         <div id="projects" draggable="true">
-            <img id="0" src="" alt="">
-            <img id="1" src="" alt="">
-            <img id="2" src="" alt="">
-            <img id="3" src="" alt="">
-            <img id="4" src="" alt="">
-            <img id="5" src="" alt="">
-            <img id="6" src="" alt="">
-            <img id="7" src="" alt="">
-            <img id="8" src="" alt="">
-            <img id="9" src="" alt="">
-            <img id="10" src="" alt="">
-            <img id="11" src="" alt="">
-            <img id="12" src="" alt="">
-            <img id="13" src="" alt="">
-            <img id="14" src="" alt="">
-            <img id="15" src="" alt="">
-            <img id="16" src="" alt="">
-            <img id="17" src="" alt="">
-            <img id="18" src="" alt="">
-            <img id="19" src="" alt="">
+            <div class="x" id="x0"><img id="0" src="" alt=""></div>
+            <div class="x" id="x1"><img id="1" src="" alt=""></div>
+            <div class="x" id="x2"><img id="2" src="" alt=""></div>
+            <div class="x" id="x3"><img id="3" src="" alt=""></div>
+            <div class="x" id="x4"><img id="4" src="" alt=""></div>
+            <div class="x" id="x5"><img id="5" src="" alt=""></div>
+            <div class="x" id="x6"><img id="6" src="" alt=""></div>
+            <div class="x" id="x7"><img id="7" src="" alt=""></div>
+            <div class="x" id="x8"><img id="8" src="" alt=""></div>
+            <div class="x" id="x9"><img id="9" src="" alt=""></div>
+            <div class="x" id="x10"><img id="10" src="" alt=""></div>
+            <div class="x" id="x11"><img id="11" src="" alt=""></div>
+            <div class="x" id="x12"><img id="12" src="" alt=""></div>
+            <div class="x" id="x13"><img id="13" src="" alt=""></div>
+            <div class="x" id="x14"><img id="14" src="" alt=""></div>
             <script>
                 var i = 0;
-                for (var i = 0; i <= 19; i++) {
+                for (var i = 0; i <= 14; i++) {
                     document.getElementById(i).src = "img/" + i + ".jpg";
+                    document.getElementById("x" + i).style.zIndex = -1 * i;
                     //document.getElementById(i).style.transform = "translateX(" + (Math.random() * window.innerWidth - (window.innerWidth / 2)) + "px) translateY(" + (Math.random() * window.innerHeight - (window.innerHeight / 2)) + "px)";
                 }
             </script>
         </div>
     </div>
+    <div class="scroll">Scroll ↓</div>
     <div id="preload"><div id="p"></div></div>
     <div id="cursorFollower"></div>
     <div id="cursor">
