--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="https://use.typekit.net/tdd5rjb.css">
 </head>
 <body>
@@ -15,15 +16,18 @@
         <a href="index.html" class="logo">Joseph Yoon</a>
         <div id="links">
             <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a class="contact" href="contact.html">Contact</a>
         </div>
     </div>
     <div id="about">
-        <p id="desc"><a href="index.html">Joseph Yoon</a>  is an avid artist and photographer based in Ithaca, NY. He currently attends Cornell University and has ambitious creative plans for the future.</p>
-        <div id="image"></div>
+        <p id="desc">
+            <a href="mailto:yoonjoseph99@gmail.com">Email</a>
+            <br>
+            <a href="https://www.instagram.com/jsphyn/" target="none">Instagram</a>
+        </p>
         <div id="footer">© Joseph Yoon 2020</div>
     </div>
-    <div id="preload"><p id="p"></p></div>
+    <!--<div id="preload"><p id="p"></p></div>-->
     <div id="cursorFollower"></div>
     <div id="cursor">
         <div class="a"></div>
