--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="index.html" class="logo">Joseph Yoon</a>
         <div id="links">
             <a href="about.html">About</a>
+            <a class="contact" href="contact.html">Contact</a>
         </div>
     </div>
     <div id="pageWrap">
