--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
         </div>
     </div>
     <div id="about">
-        <p id="desc"><a href="index.html">Joseph Yoon</a>  is an avid artist and photographer based in Ithaca, NY. He currently attends Cornell University and has ambitious creative plans for the future.</p>
+        <p id="desc"><a href="index.html">Joseph Yoon</a>  is an artist and photographer based in Ithaca, NY. He currently attends Cornell University.</p>
         <div id="image"></div>
-        <div id="footer">© Joseph Yoon 2020</div>
+        <div id="footer">© Joseph Yoon 2022</div>
     </div>
     <div id="preload"><div id="p"></div></div>
     <div id="cursorFollower"></div>
