--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="https://use.typekit.net/tdd5rjb.css">
+    <link rel="icon" href="img/ui/logo.png">
 </head>
 <body>
     <div id="header">
