--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="https://use.typekit.net/tdd5rjb.css">
+    <link rel="icon" href="img/ui/logo.png">
 </head>
 <body>
     <div id="header">
@@ -25,7 +26,7 @@
             <br>
             <a href="https://www.instagram.com/jsphyn/" target="none">Instagram</a>
         </p>
-        <div id="footer">© Joseph Yoon 2020</div>
+        <div id="footer">© Joseph Yoon 2022</div>
     </div>
     <!--<div id="preload"><p id="p"></p></div>-->
     <div id="cursorFollower"></div>
